--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,9 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="16dp"
-        android:screenOrientation="landscape">
+        android:background="@drawable/background"
+        android:configChanges="orientation"
+        android:screenOrientation="sensorLandscape">
 
         <ImageView
             android:id="@+id/tvMain"
@@ -17,24 +19,50 @@
             android:layout_weight="1"
             android:background="@drawable/title_caro" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="131dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            android:background="@drawable/icon_2" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="131dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="38dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/icon_2"
-                />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <ImageButton
                 android:id="@+id/btnPlay"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/start" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btnSpeaker"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="100dp"
+                    android:background="@drawable/speaker" />
+
+                <ImageButton
+                    android:id="@+id/btnInfo"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="50dp"
+
+                    android:background="@drawable/info" />
+            </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
     </LinearLayout>
