--- a/app/src/main/res/layout/activity_nick_name.xml
+++ b/app/src/main/res/layout/activity_nick_name.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
-    android:screenOrientation="landscape"
+    android:background="@drawable/background"
     android:orientation="vertical"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="16dp">
+    android:paddingTop="16dp"
+    android:screenOrientation="sensorLandscape">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
     </LinearLayout>
 
 
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -43,26 +43,26 @@
             android:background="@drawable/rounded_edittext"
             android:gravity="center"
             android:textSize="50dp" />
-    </LinearLayout>-->
+    </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="50dp"
+        android:padding="10dp"
         android:weightSum="1">
 
         <ImageButton
             android:id="@+id/btnYes"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/yes"
-            android:layout_gravity="right"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/yes"/>
         <ImageButton
             android:id="@+id/btnNo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/no"
-            android:layout_gravity="right"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/no" />
 
 
 
